--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<div class="hero">
+        <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Hero Image" height = "200" width = "350">
+        <div class="hero-content">
+            <h1>Welcome to my Pinterest clone</h1>
+            <p>Discover new inspiration and save your favorite ideas</p><br>
+            <a href="#" class="button">Explore Now</a>
+        </div>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
