--- a/main.html
+++ b/main.html
@@ -4,6 +4,41 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		body {
+			padding: 0;
+            margin: 0;
+            font-family: Arial, sans-serif;
+}
+
+.hero img{
+	object-fit: cover;
+	display: flex;
+	position: relative;
+}
+
+.hero-content {
+    text-align: center;
+	font-size: 7px;
+    color: black;
+	position: absolute;
+	top: 45px;
+	left:380px;
+}
+
+.hero-content h1 {
+    font-size: 3em;
+    margin: 0;
+}
+
+.button {
+	padding: 8px;
+	background-color: red;
+	color: white;
+	border-radius: 5px;
+	text-decoration: none;
+}
+	</style>
 </head>
 
 <body>
@@ -12,7 +47,7 @@
 	<div class="hero">
         <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Hero Image" height = "200" width = "350">
         <div class="hero-content">
-            <h1>Welcome to my Pinterest clone</h1>
+            <h1>Welcome to my<br>Pinterest clone</h1>
             <p>Discover new inspiration and save your favorite ideas</p><br>
             <a href="#" class="button">Explore Now</a>
         </div>
